deployment/minikube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neuron
  namespace: phoenix
spec:
  selector:
    matchLabels:
      app: neuron
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: neuron
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role:  "phoenix-neuron"
        vault.hashicorp.com/agent-requests-cpu: "125m"
        vault.hashicorp.com/agent-requests-mem: "128Mi"
        vault.hashicorp.com/agent-pre-populate-only:    "true"
        vault.hashicorp.com/agent-inject-default-template: "json"
        vault.hashicorp.com/agent-inject-secret-.nu.json: "microservices/data/phoenix/neuron"
    spec:
      serviceAccountName: neuron
      terminationGracePeriodSeconds: 16200 # 4.5 hours
      containers:
        - name: neuron
          image: neuron
          imagePullPolicy: Never
          ports:
            - containerPort: 9876
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 125m
              memory: 128Mi
          readinessProbe:
            failureThreshold: 2
            httpGet:
              path: /health
              port: 9876
            initialDelaySeconds: 10
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
