deployment/minikube/seccomploaderdaemonset.yml
apiVersion: apps/v1
kind: DaemonSet                     
metadata:
  name: seccomp-config
  labels:
    app: seccomp-config
spec:
  selector:
    matchLabels:
      name: seccomp-config
  template:
    metadata:
      labels:
        name: seccomp-config
    spec:
      containers:
      - name: seccomp-config
        image: seccomploader
        imagePullPolicy: Never
        volumeMounts:
        - name: configfile
          mountPath: /var/lib/kubelet/seccomp
      priorityClassName: high-priority
      volumes:
      - name: configfile
        hostPath:
          path: /var/lib/kubelet/seccomp
