deployment/minikube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: neuron-service
  namespace: phoenix
spec:
  # type: NodePort
  selector:
    app: neuron
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9876
