deployment/minikube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neuron-ingress
  namespace: phoenix
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~ ^/(internal|debug) {
        return 404;
      }
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: neuron-service
spec:
  rules:
    - host: tas-local.lambdatest.io
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: neuron-service
              port: 
                number: 80
